unpackaged/main/default/objects/Contract_Amendment__c/Contract_Amendment__c.object-meta.xml
<CustomObject>
    <description>Variation / novation / subcontract / subsequent implementation (statement of work)</description>
    <label>Contract Amendment</label>
    <nameField>
        <displayFormat>CA-{0000000000}</displayFormat>
        <label>Contract Amendment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Amendments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>