unpackaged/main/default/objects/Contract_Amendment__c/fields/Acceptance_Process__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Process__c</fullName>
    <label>Acceptance Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>T1 Standard</fullName>
            </value>
            <value>
                <fullName>Customer Defined</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>