unpackaged/main/default/objects/Contract_Amendment__c/fields/Acceptance_Process_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Process_Clause_Ref__c</fullName>
    <label>Acceptance Process Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>