unpackaged/main/default/objects/Contract_Amendment__c/fields/Chargeable_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Expenses__c</fullName>
    <inlineHelpText>If yes, T1 can charge expenses</inlineHelpText>
    <label>Chargeable Expenses</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>