unpackaged/main/default/objects/Contract_Amendment__c/fields/Consulting_Cancel_Suspension_Detail__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Cancel_Suspension_Detail__c</fullName>
    <inlineHelpText>Detail the Customers right to suspend/cancel consulting services / the project including minimum notice period, payment obligations on cancellation, obligation of T1 to find alternative bookings/mitigate costs etc.</inlineHelpText>
    <label>Consulting Cancel/Suspension Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>