unpackaged/main/default/objects/Contract_Amendment__c/fields/Delivery_Delay_Detail__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Delay_Detail__c</fullName>
    <inlineHelpText>How delay of project is managed, how T1 can recover costs for customer delays etc.</inlineHelpText>
    <label>Delivery Delay Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>