unpackaged/main/default/objects/Contract_Amendment__c/fields/Delivery_Timeframes_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Timeframes_Clause_Ref__c</fullName>
    <label>Delivery Timeframes Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>