unpackaged/main/default/objects/Contract_Amendment__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Description of variation / change in parties / subcontracted services</inlineHelpText>
    <label>Description</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>