unpackaged/main/default/objects/Contract_Amendment__c/fields/Description_of_Change_in_Parties__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Change_in_Parties__c</fullName>
    <label>Description of Change in Parties</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>