unpackaged/main/default/objects/Contract_Amendment__c/fields/Description_of_Subcontracted_Services__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Subcontracted_Services__c</fullName>
    <label>Description of Subcontracted Services</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>