unpackaged/main/default/objects/Contract_Amendment__c/fields/Expenses_Detail__c.field-meta.xml
<CustomField>
    <fullName>Expenses_Detail__c</fullName>
    <inlineHelpText>What T1 can and cannot charge for, if prior approval required, how to request payment, receipts to be provided, any estimates provided and process to manage estimates etc.</inlineHelpText>
    <label>Expenses Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>