unpackaged/main/default/objects/Contract_Amendment__c/fields/Fixed_Date_Retention__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Date_Retention__c</fullName>
    <inlineHelpText>If yes, retention is forfeited if service not performed by specified date (i.e. a high risk register retention)</inlineHelpText>
    <label>Fixed Date Retention</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>