unpackaged/main/default/objects/Contract_Amendment__c/fields/High_Risk_Scope_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_Scope_Clause_Ref__c</fullName>
    <label>High Risk Scope Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>