unpackaged/main/default/objects/Contract_Amendment__c/fields/High_Risk_Scope_Inclusions__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_Scope_Inclusions__c</fullName>
    <inlineHelpText>High Risk register scope inclusions e.g. data migration (beyond provision of toolkits/templates), integration (beyond provision of toolkits/templates), organisation change, customer UAT and end user training</inlineHelpText>
    <label>High Risk Scope Inclusions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not specified by business</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>