unpackaged/main/default/objects/Contract_Amendment__c/fields/Implementation_Fee_Detail__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Fee_Detail__c</fullName>
    <inlineHelpText>Payment terms, management of time &amp; materials estimates and delays</inlineHelpText>
    <label>Implementation Fee Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>