unpackaged/main/default/objects/Contract_Amendment__c/fields/Implementation_Methodology_Agreed_Used__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Methodology_Agreed_Used__c</fullName>
    <inlineHelpText>Other - see Other Initial Implementation Notes</inlineHelpText>
    <label>Implementation Methodology Agreed/Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SIM1</fullName>
            </value>
            <value>
                <fullName>SIM2</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>