unpackaged/main/default/objects/Contract_Amendment__c/fields/Key_Personnel__c.field-meta.xml
<CustomField>
    <fullName>Key_Personnel__c</fullName>
    <inlineHelpText>Are any T1 staff nominated as Key Personnel under the contract?</inlineHelpText>
    <label>Key Personnel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>