unpackaged/main/default/objects/Contract_Amendment__c/fields/Key_Personnel_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Key_Personnel_Clause_Ref__c</fullName>
    <label>Key Personnel Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>