unpackaged/main/default/objects/Contract_Amendment__c/fields/Milestone_Payments_Detail__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Payments_Detail__c</fullName>
    <label>Milestone Payments Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>