unpackaged/main/default/objects/Contract_Amendment__c/fields/Non_Standard_Travel_Expense_Management__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Travel_Expense_Management__c</fullName>
    <inlineHelpText>If yes, travel &amp; expense impacts standard process e.g. approval required in advance, customer booking travel, receipts to be provided etc.</inlineHelpText>
    <label>Non-Standard Travel &amp; Expense Management</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>