unpackaged/main/default/objects/Contract_Amendment__c/fields/Other_Subsequent_Implementation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Subsequent_Implementation_Notes__c</fullName>
    <label>Other Subsequent Implementation Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>