unpackaged/main/default/objects/Contract_Amendment__c/fields/Rate_Card_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Clause_Ref__c</fullName>
    <label>Rate Card Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>