unpackaged/main/default/objects/Contract_Amendment__c/fields/Rate_Card_Detail__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Detail__c</fullName>
    <inlineHelpText>Specific non-standard terms, not specific rates</inlineHelpText>
    <label>Rate Card Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>