unpackaged/main/default/objects/Contract_Amendment__c/fields/Rate_Card_Specified__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Specified__c</fullName>
    <label>Rate Card Specified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Initial Scope Only</fullName>
            </value>
            <value>
                <fullName>Fixed Period</fullName>
            </value>
            <value>
                <fullName>Initial Scope and Variations</fullName>
            </value>
            <value>
                <fullName>Life of Contract</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>