unpackaged/main/default/objects/Contract_Amendment__c/fields/Recommencement_of_Services_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Recommencement_of_Services_Clause_Ref__c</fullName>
    <label>Recommencement of Services Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>