unpackaged/main/default/objects/Contract_Amendment__c/fields/Recommencement_of_Services_Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>Recommencement_of_Services_Time_Limit__c</fullName>
    <inlineHelpText>If yes, there is a requirement to recommence suspended consulting services within a specified time period</inlineHelpText>
    <label>Recommencement of Services Time Limit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>