unpackaged/main/default/objects/Contract_Amendment__c/fields/Recommencement_of_Services_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Recommencement_of_Services_Timeframe__c</fullName>
    <inlineHelpText>The time period that the Customer is required to recommence suspended consulting services</inlineHelpText>
    <label>Recommencement of Services Timeframe</label>
    <length>200</length>
    <type>Text</type>
</CustomField>