unpackaged/main/default/objects/Contract_Amendment__c/fields/Retention_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Retention_Clause_Ref__c</fullName>
    <label>Retention Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>