unpackaged/main/default/objects/Contract_Amendment__c/fields/Retention_Detail__c.field-meta.xml
<CustomField>
    <fullName>Retention_Detail__c</fullName>
    <inlineHelpText>Details of release/payment triggers</inlineHelpText>
    <label>Retention Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>