unpackaged/main/default/objects/Contract_Amendment__c/fields/Subcontractor_Name__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_Name__c</fullName>
    <label>Subcontractor Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>