unpackaged/main/default/objects/Contract_Amendment__c/fields/Travel_Recharge_Clause_Ref__c.field-meta.xml
<CustomField>
    <fullName>Travel_Recharge_Clause_Ref__c</fullName>
    <label>Travel Recharge Clause Ref</label>
    <length>200</length>
    <type>Text</type>
</CustomField>