unpackaged/main/default/objects/Contract_Amendment__c/fields/Travel_Recharge_Detail__c.field-meta.xml
<CustomField>
    <fullName>Travel_Recharge_Detail__c</fullName>
    <inlineHelpText>What T1 can and cannot charge for, if prior approval required, how to request payment, if receipts are to be provided, minimum days on site, customer to book travel, estimates provided and process to manage estimates etc.</inlineHelpText>
    <label>Travel Recharge Detail</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>