unpackaged/main/default/objects/Contract_Amendment__c/fields/Travel_Time_Included_in_Day_Rates__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time_Included_in_Day_Rates__c</fullName>
    <label>Travel Time Included in Day Rates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>