unpackaged/main/default/objects/Contract_Amendment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Variation</fullName>
            </value>
            <value>
                <fullName>Full Novation</fullName>
            </value>
            <value>
                <fullName>Partial Novation</fullName>
            </value>
            <value>
                <fullName>Subcontract</fullName>
            </value>
            <value>
                <fullName>Subsequent Implementation</fullName>
            </value>
            <value>
                <fullName>Change in Customer Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>