unpackaged/main/default/objects/Contract_Amendment__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <inlineHelpText>Contract amendment URL in ECM</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>